feat: add static pages and content

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/iainfreestone/exploring-hapi#readme",
   "dependencies": {
-    "hapi": "^17.5.4"
+    "hapi": "^17.5.4",
+    "inert": "^5.1.0"
   }
 }
